ATLAS-1073: finished code review